sommer und winter button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Course Planner</h1>
-    <button id="clear-button">Clear Planner</button>
+    <div id="button-container">
+        <button id="clear-button">Clear Planner</button>
+        <button data-filter="all">Alle Module</button>
+        <button data-filter="summer">Sommer Module</button>
+        <button data-filter="winter">Winter Module</button>
+    </div>
     <div id="freie-wahl" class="electives-container "></div>
     <div id="electives" class="electives-container "></div>
     <div id="semesters" class="semester-container"></div>
