--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div id="freie-wahl" class="electives-container "></div>
     <div id="freie-wahl-container">
-        <input type="text" id="freie-wahl-name" placeholder="Class Name">
-        <input type="number" id="freie-wahl-credits" placeholder="Credits (3, 6, 9)" min="3" step="3">
+        <input type="text" id="freie-wahl-name" placeholder="Name des Kurses">
+        <input type="number" id="freie-wahl-credits" placeholder="Credits" min="1" step="1" max="30">
         <button id="add-freie-wahl">Add Course</button>
         <div id="freie-wahl"></div>
     </div>
